--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.21",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
