--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
     "framer-motion": "^7.5.1",
     "next": "12.3.1",
     "react": "18.2.0",
