--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^7.5.1",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.6.5",
     "next": "12.3.1",
+    "next-auth": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.37.0",
     "react-icons": "^4.4.0",
+    "react-loading-icons": "^1.1.0",
+    "react-toastify": "^9.0.8",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typewriter-effect": "^2.19.0"
   },
